--- a/idm362-jam949/Base.lproj/Main.storyboard
+++ b/idm362-jam949/Base.lproj/Main.storyboard
@@ -5,6 +5,8 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="UIMenu" message="Requires Xcode 11 or later." minToolsVersion="11.0" requiredIntegratedClassName="UICommandDiff"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -77,7 +79,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7r4-pM-4dR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1022.1374045801526" y="736.61971830985919"/>
+            <point key="canvasLocation" x="-5718" y="45"/>
         </scene>
         <!--Home-->
         <scene sceneID="wSz-w1-9dV">
@@ -158,7 +160,130 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BCM-mu-T9X" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2329.0076335877861" y="736.61971830985919"/>
+            <point key="canvasLocation" x="-6360" y="45"/>
+        </scene>
+        <!--Item 2-->
+        <scene sceneID="xRN-yQ-2mc">
+            <objects>
+                <viewController id="2v3-v2-wKl" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="IGq-IU-Rys">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wV2-zj-elP">
+                                <rect key="frame" x="113" y="387" width="167" height="78"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Button">
+                                    <color key="baseBackgroundColor" name="AccentColor"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="X71-YD-kqo" kind="show" id="vhy-zh-mR1"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="This is a way for the button to go" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Lm-Nd-h2U">
+                                <rect key="frame" x="16" y="185" width="333" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="To the other transition" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8c7-bd-mjr">
+                                <rect key="frame" x="16" y="222" width="224" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="7AK-ct-TB1"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="7AK-ct-TB1" firstAttribute="bottom" secondItem="wV2-zj-elP" secondAttribute="bottom" constant="304" id="30M-LC-wfD"/>
+                            <constraint firstItem="wV2-zj-elP" firstAttribute="leading" secondItem="7AK-ct-TB1" secondAttribute="leading" constant="113" id="6OO-70-9Z6"/>
+                            <constraint firstItem="wV2-zj-elP" firstAttribute="top" secondItem="7AK-ct-TB1" secondAttribute="top" constant="328" id="PNQ-AG-Bdt"/>
+                            <constraint firstItem="7AK-ct-TB1" firstAttribute="trailing" secondItem="wV2-zj-elP" secondAttribute="trailing" constant="113" id="cdp-oB-nKa"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="off-AI-9t9"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k2B-yl-8Of" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1277.0992366412213" y="650.70422535211276"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="4GN-ga-KMf">
+            <objects>
+                <viewController id="X71-YD-kqo" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YPT-kx-D9l">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fid-el-DBL">
+                                <rect key="frame" x="143" y="405" width="100" height="57"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="64"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="BVf-0O-vqo"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Fid-el-DBL" firstAttribute="top" secondItem="BVf-0O-vqo" secondAttribute="top" constant="346" id="8Tr-pD-A8S"/>
+                            <constraint firstItem="BVf-0O-vqo" firstAttribute="bottom" secondItem="Fid-el-DBL" secondAttribute="bottom" constant="321" id="cDH-Yb-h7Y"/>
+                            <constraint firstItem="Fid-el-DBL" firstAttribute="leading" secondItem="BVf-0O-vqo" secondAttribute="leading" constant="143" id="n1N-nT-Rhy"/>
+                            <constraint firstItem="BVf-0O-vqo" firstAttribute="trailing" secondItem="Fid-el-DBL" secondAttribute="trailing" constant="150" id="zRa-hd-UbE"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="l2u-RA-nwP"/>
+                    <navigationItem key="navigationItem" id="KFU-0h-fl3"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2fp-e3-BKn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-503.05343511450377" y="650.70422535211276"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="PdO-1Z-36m">
+            <objects>
+                <viewController id="RGa-U9-J2w" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hgb-k5-0sB">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="6bG-yP-cFe">
+                                <rect key="frame" x="20" y="330" width="353" height="32"/>
+                                <segments>
+                                    <segment title="First"/>
+                                    <segment title="Second"/>
+                                    <segment title="Third"/>
+                                </segments>
+                            </segmentedControl>
+                            <button opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FuQ-lS-c0n">
+                                <rect key="frame" x="20" y="589" width="353" height="30"/>
+                                <menu key="menu" id="EVk-z8-x4D">
+                                    <children>
+                                        <command title="Item 1" id="PrT-l6-Kkj"/>
+                                        <command title="Item 2" id="pLz-VU-2BN"/>
+                                    </children>
+                                </menu>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="sdZ-rX-Utk"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="sdZ-rX-Utk" firstAttribute="bottom" secondItem="FuQ-lS-c0n" secondAttribute="bottom" constant="150" id="2vW-QO-tst"/>
+                            <constraint firstItem="FuQ-lS-c0n" firstAttribute="leading" secondItem="sdZ-rX-Utk" secondAttribute="leading" constant="20" id="Hb1-qa-91z"/>
+                            <constraint firstItem="6bG-yP-cFe" firstAttribute="top" secondItem="sdZ-rX-Utk" secondAttribute="top" constant="271" id="YDG-bX-dcs"/>
+                            <constraint firstItem="6bG-yP-cFe" firstAttribute="leading" secondItem="sdZ-rX-Utk" secondAttribute="leading" constant="20" id="nUR-82-8db"/>
+                            <constraint firstItem="sdZ-rX-Utk" firstAttribute="trailing" secondItem="FuQ-lS-c0n" secondAttribute="trailing" constant="20" id="tlE-LC-GDd"/>
+                            <constraint firstItem="sdZ-rX-Utk" firstAttribute="trailing" secondItem="6bG-yP-cFe" secondAttribute="trailing" constant="20" id="vla-E3-7sz"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="RdE-Tz-A74"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RlG-FR-tnQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2422" y="651"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="1F5-Sa-PhL">
@@ -171,15 +296,19 @@
                         <color key="tintColor" name="AccentColor"/>
                     </tabBar>
                     <connections>
-                        <segue destination="Leg-qz-H5t" kind="relationship" relationship="viewControllers" id="HnX-dF-Lvp"/>
-                        <segue destination="ail-iY-lhd" kind="relationship" relationship="viewControllers" id="hwH-Rm-XR4"/>
+                        <segue destination="RGa-U9-J2w" kind="relationship" relationship="viewControllers" id="LjG-zZ-TKN"/>
+                        <segue destination="2v3-v2-wKl" kind="relationship" relationship="viewControllers" id="dfg-9w-0ZL"/>
+                        <segue destination="X71-YD-kqo" kind="relationship" relationship="viewControllers" id="VOa-qr-5es"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="69b-ib-qR5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1685" y="3"/>
+            <point key="canvasLocation" x="-1767" y="-68"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="vhy-zh-mR1"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="DBFZ Icons" width="512" height="512"/>
         <image name="Dustloop Home Image" width="512" height="512"/>
@@ -191,7 +320,10 @@
         <image name="gear.circle.fill" catalog="system" width="128" height="123"/>
         <image name="house.fill" catalog="system" width="128" height="104"/>
         <namedColor name="AccentColor">
-            <color red="0.73619383569999997" green="0.23580491540000001" blue="0.2430990338" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <color red="0.73600000143051147" green="0.23600000143051147" blue="0.24300000071525574" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
