Week 05 and 06 shit to do

--- a/idm362-jam949/Base.lproj/Main.storyboard
+++ b/idm362-jam949/Base.lproj/Main.storyboard
@@ -177,7 +177,7 @@
                                     <color key="baseBackgroundColor" name="AccentColor"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <segue destination="X71-YD-kqo" kind="show" id="vhy-zh-mR1"/>
+                                    <segue destination="X71-YD-kqo" kind="push" id="vhy-zh-mR1"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="This is a way for the button to go" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Lm-Nd-h2U">
